--- a/index.html
+++ b/index.html
@@ -3,101 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH PvP BET V60 👑</title>
+    <title>ALLOSH SUPREME V61 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
         :root { --gold: #ffd700; --bg: #000; }
-        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; transition: 0.3s; }
         body { background: var(--bg); color: white; overflow: hidden; height: 100vh; position: fixed; width: 100%; }
 
         /* الاسم النيون الفخم */
-        .king-name { animation: neon-glow 2s infinite; font-weight: 900; }
-        @keyframes neon-glow { 0%, 100% {color: #fff; text-shadow: 0 0 10px var(--gold);} 50% {color: var(--gold); text-shadow: 0 0 20px #fff;} }
+        @keyframes neon { 0%, 100% {color: #fff; text-shadow: 0 0 10px var(--gold);} 50% {color: var(--gold); text-shadow: 0 0 20px #fff;} }
+        .king-name { animation: neon 2s infinite; font-weight: 900; }
 
         /* الهيدر */
-        .header { height: 60px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 5000; }
-
-        /* واجهة اللعبة الحقيقية */
-        #game-layer { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.98); z-index: 9999; display: none; justify-content: center; align-items: center; }
-        .game-card { width: 95%; max-width: 500px; background: #fff; border-radius: 25px; color: #333; overflow: hidden; box-shadow: 0 0 40px var(--gold); }
-        .p-stat { flex: 1; padding: 15px; text-align: center; border-radius: 15px; background: #f9f9f9; border: 2px solid #eee; }
-        .p-stat.active-turn { border-color: #2ecc71; background: #f0fff0; transform: scale(1.05); }
-        .score-big { font-size: 50px; font-weight: 900; color: #2ecc71; line-height: 1; }
-        .bet-input { width: 120px; padding: 10px; border: 2px solid var(--gold); border-radius: 10px; text-align: center; font-weight: 900; font-size: 18px; }
+        .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 5000; }
 
         /* القوائم والطبقة الشفافة */
-        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: rgba(10,10,15,0.98); z-index: 6000; transition: 0.4s; border-left: 1px solid var(--gold); border-right: 1px solid var(--gold); }
-        #side-r { right: -285px; } #side-l { left: -285px; }
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: rgba(10,10,15,0.98); z-index: 6000; backdrop-filter: blur(15px); }
+        #side-r { right: -285px; border-left: 2px solid var(--gold); }
+        #side-l { left: -285px; border-right: 2px solid var(--gold); overflow-y: auto; }
         .side.active { transform: translateX(0); }
         #side-r.active { right: 0; } #side-l.active { left: 0; }
         #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); z-index: 5500; display: none; }
 
-        /* الشات */
-        #chat { position: absolute; top: 60px; bottom: 80px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .bubble { background: rgba(255,255,255,0.08); padding: 10px; border-radius: 15px; border: 1px solid #222; max-width: 80%; }
+        /* الملف الشخصي الملكي */
+        .profile-card { position: relative; width: 100%; background: #111; }
+        .cover-img { width: 100%; height: 140px; object-fit: cover; border-bottom: 2px solid var(--gold); cursor: pointer; }
+        .avatar-container { position: absolute; bottom: -40px; right: 20px; text-align: center; }
+        .avatar-img { width: 85px; height: 85px; border-radius: 50%; border: 3px solid var(--gold); background: #000; cursor: pointer; }
+        .big-crown { position: absolute; top: -35px; right: 5px; font-size: 45px; filter: drop-shadow(0 0 10px gold); }
 
-        .footer { position: fixed; bottom: 0; width: 100%; height: 80px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 10px; }
+        /* اللعبة */
+        #game-ui { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 9000; display: none; justify-content: center; align-items: center; }
+        .game-box { width: 95%; max-width: 500px; background: #fff; border-radius: 20px; color: #333; overflow: hidden; box-shadow: 0 0 30px var(--gold); }
+        .p-card { flex: 1; padding: 15px; text-align: center; border-radius: 12px; background: #f8f8f8; border: 2px solid #eee; }
+        .p-card.active-turn { border-color: #2ecc71; background: #f0fff4; }
+
+        /* الشات */
+        #chat-area { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .msg-bubble { background: rgba(255,255,255,0.08); padding: 10px; border-radius: 12px; border: 1px solid #222; max-width: 85%; }
+
+        .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 10px; }
         input[type="text"] { flex: 1; height: 45px; background: #111; border: 1px solid #333; border-radius: 10px; color: #fff; padding: 0 15px; }
     </style>
 </head>
-<body>
+<body id="main-body">
 
 <div id="overlay" onclick="closeSides()"></div>
 
-<div id="game-layer">
-    <div class="game-card">
+<div id="game-ui">
+    <div class="game-box">
         <div style="background:#222; color:white; padding:15px; display:flex; justify-content:space-between; align-items:center;">
-            <button onclick="document.getElementById('game-layer').style.display='none'" style="background:#ff4757; color:white; border:none; padding:8px 15px; border-radius:10px; font-weight:bold; cursor:pointer;">خروج</button>
-            <span id="game-info">تحدي الرهان الملكي 💰</span>
+            <button onclick="document.getElementById('game-ui').style.display='none'" style="background:red; border:none; color:white; padding:5px 15px; border-radius:8px; cursor:pointer;">خروج</button>
+            <b id="game-status">تحدي العملات الملكي 💰</b>
         </div>
-        
         <div style="padding:20px;">
             <div style="text-align:center; margin-bottom:15px;">
-                <label style="display:block; font-size:12px; font-weight:bold; color:#666;">مبلغ الرهان (عملة)</label>
-                <input type="number" id="bet-coins" class="bet-input" placeholder="000" oninput="updateBet(this.value)">
+                <label style="font-size:12px; color:#666;">مبلغ الرهان</label><br>
+                <input type="number" id="bet-amount" style="width:100px; text-align:center; font-weight:900; border:2px solid gold; border-radius:8px;" oninput="updateLiveBet(this.value)">
             </div>
-
             <div style="display:flex; gap:10px; margin-bottom:20px;">
-                <div class="p-stat" id="p1-card"><small>الإمبراطور</small><div class="score-big" id="s1">0</div></div>
-                <div style="align-self:center; font-weight:900; color:#ccc;">VS</div>
-                <div class="p-stat" id="p2-card"><small>الخصم</small><div class="score-big" id="s2">0</div></div>
+                <div class="p-card" id="pc1"><small>الإمبراطور</small><div style="font-size:40px; font-weight:900; color:#2ecc71;" id="sc1">0</div></div>
+                <div class="p-card" id="pc2"><small>الخصم</small><div style="font-size:40px; font-weight:900; color:#2ecc71;" id="sc2">0</div></div>
             </div>
-
             <div style="text-align:center;">
-                <div id="dice-res" style="font-size:70px; margin-bottom:15px; transition: 0.5s;">🎲</div>
-                <button id="roll-btn" onclick="executeRoll()" style="width:100%; padding:18px; background:linear-gradient(45deg, #1e3799, #4a69bd); color:white; border:none; border-radius:15px; font-weight:900; font-size:20px; cursor:pointer; display:none; box-shadow: 0 5px 15px rgba(0,0,0,0.2);">ارمي الزهر 🔥</button>
+                <div id="dice-face" style="font-size:60px;">🎲</div>
+                <button id="roll-btn" onclick="rollAction()" style="width:100%; padding:15px; background:linear-gradient(45deg, #1e3799, #4a69bd); color:white; border:none; border-radius:12px; font-weight:900; display:none; cursor:pointer;">ارمي الزهر 🔥</button>
             </div>
         </div>
     </div>
 </div>
 
 <div class="header">
-    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px; color:white;">⚙️</button>
-    <div onclick="initGame()" style="font-size:32px; cursor:pointer; filter:drop-shadow(0 0 5px gold);">🎮</div>
+    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px;">⚙️</button>
+    <div onclick="openGame()" style="font-size:32px; cursor:pointer;">🎮</div>
     <div class="king-name">علوش الإمبراطور</div>
-    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px; color:white;">👥</button>
+    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px;">👥</button>
 </div>
 
 <div id="side-r" class="side">
-    <h3 style="padding:20px; text-align:center; color:var(--gold);">المتصلون</h3>
-    <div id="users-list" style="padding:15px;"></div>
+    <h3 style="padding:20px; text-align:center; color:var(--gold);">المتصلون الآن</h3>
+    <div id="online-list" style="padding:15px;"></div>
 </div>
 
 <div id="side-l" class="side">
-    <div style="padding:20px; text-align:center;">
-        <span style="font-size:40px;">👑</span><br>
-        <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:90px; border-radius:50%; border:3px solid gold; margin-bottom:10px;">
+    <div class="profile-card">
+        <img class="cover-img" id="my-cover" src="https://images.unsplash.com/photo-1614850523296-d8c1af93d400" onclick="document.getElementById('f-cover').click()">
+        <input type="file" id="f-cover" hidden onchange="upCover(this)">
+        <div class="avatar-container">
+            <span class="big-crown">👑</span>
+            <img class="avatar-img" id="my-avatar" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" onclick="document.getElementById('f-avatar').click()">
+            <input type="file" id="f-avatar" hidden onchange="upAvatar(this)">
+        </div>
+    </div>
+    <div style="margin-top:55px; padding:20px; text-align:center;">
         <h2 class="king-name">علوش</h2>
-        <button onclick="rainGold()" style="width:100%; padding:15px; background:var(--gold); border:none; border-radius:12px; font-weight:900; margin-top:30px; cursor:pointer;">توزيع 5000 ذهبة 💰</button>
+        <p style="color:var(--gold); font-size:12px;">الإمبراطور المتصل</p>
+        <button onclick="rainGold()" style="width:100%; padding:15px; background:var(--gold); border:none; border-radius:12px; font-weight:900; margin-top:20px; cursor:pointer;">توزيع الذهب 💰</button>
     </div>
 </div>
 
-<div id="chat"></div>
+<div id="chat-area"></div>
 
 <div class="footer">
-    <input type="text" id="msg-input" placeholder="اكتب رسالتك..." onkeypress="if(event.key==='Enter') sendMsg()">
+    <input type="text" id="msg-input" placeholder="تكلم يا إمبراطور..." onkeypress="if(event.key==='Enter') sendMsg()">
     <button onclick="sendMsg()" style="background:var(--gold); border:none; padding:10px 20px; border-radius:10px; font-weight:900;">إرسال</button>
 </div>
 
@@ -107,82 +117,80 @@
     const db = firebase.database();
 
     let myPos = null;
-    let gameRef = db.ref('bet_arena_v60');
+    let me = { name: "علوش الإمبراطور", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
+    let gameRef = db.ref('arena_v61');
 
-    // فتح اللعبة وربط اللاعبين
-    function initGame() {
-        document.getElementById('game-layer').style.display = 'flex';
+    // حماية ونظام اتصال
+    db.ref('online_v61/' + me.name).set({ status: "online", role: "king" });
+    db.ref('online_v61/' + me.name).onDisconnect().remove();
+
+    db.ref('online_v61').on('value', s => {
+        let list = document.getElementById('online-list'); list.innerHTML = "";
+        s.forEach(u => {
+            list.innerHTML += `<div style="padding:10px; border-bottom:1px solid #111;">👑 ${u.key}</div>`;
+        });
+    });
+
+    // القوائم
+    function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
+    function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
+
+    // اللعبة
+    function openGame() {
+        document.getElementById('game-ui').style.display = 'flex';
         gameRef.once('value', s => {
             let d = s.val();
-            if(!d || !d.p1) { myPos = 'p1'; gameRef.update({p1:'علوش', s1:0, s2:0, turn:'p1', bet:0}); }
+            if(!d || !d.p1) { myPos = 'p1'; gameRef.update({p1: me.name, s1:0, s2:0, turn:'p1', bet:0}); }
             else if(!d.p2) { myPos = 'p2'; gameRef.update({p2:'خصم'}); }
         });
     }
 
-    // تحديث الرهان للجميع
-    function updateBet(val) { gameRef.update({ bet: val }); }
+    function updateLiveBet(v) { gameRef.update({ bet: v }); }
 
     gameRef.on('value', s => {
         let d = s.val(); if(!d) return;
-        document.getElementById('s1').innerText = d.s1 || 0;
-        document.getElementById('sc2')?.innerText || (document.getElementById('s2').innerText = d.s2 || 0);
-        document.getElementById('bet-coins').value = d.bet || 0;
-
+        document.getElementById('sc1').innerText = d.s1 || 0;
+        document.getElementById('sc2').innerText = d.s2 || 0;
+        document.getElementById('bet-amount').value = d.bet || 0;
         if(d.p1 && d.p2) {
-            document.getElementById('game-info').innerText = (d.turn === myPos) ? "دورك الآن!" : "انتظر الخصم...";
+            document.getElementById('game-status').innerText = (d.turn === myPos) ? "دورك الآن 🔥" : "انتظر الخصم...";
             document.getElementById('roll-btn').style.display = (d.turn === myPos) ? 'block' : 'none';
-            document.getElementById('p1-card').classList.toggle('active-turn', d.turn === 'p1');
-            document.getElementById('p2-card').classList.toggle('active-turn', d.turn === 'p2');
+            document.getElementById('pc1').className = (d.turn === 'p1' ? 'p-card active-turn' : 'p-card');
+            document.getElementById('pc2').className = (d.turn === 'p2' ? 'p-card active-turn' : 'p-card');
         }
-
-        if(d.s1 >= 100 || d.s2 >= 100) {
-            alert("فاز اللاعب " + (d.s1 >= 100 ? "1" : "2") + " بجائزة: " + d.bet + " عملة! 🏆");
-            gameRef.remove();
-            document.getElementById('game-layer').style.display = 'none';
-        }
+        if(d.s1 >= 100 || d.s2 >= 100) { alert("انتهى التحدي!"); gameRef.remove(); document.getElementById('game-ui').style.display = 'none'; }
     });
 
-    function executeRoll() {
+    function rollAction() {
         let r = Math.floor(Math.random() * 6) + 1;
-        const faces = ["", "⚀", "⚁", "⚂", "⚃", "⚄", "⚅"];
-        document.getElementById('dice-res').innerText = faces[r];
-        
         gameRef.once('value', s => {
             let d = s.val();
-            let currentScore = (myPos === 'p1' ? d.s1 : d.s2) + r;
-            gameRef.update({
-                [myPos === 'p1' ? 's1' : 's2']: currentScore,
-                turn: (myPos === 'p1' ? 'p2' : 'p1')
-            });
+            let ns = (myPos === 'p1' ? d.s1 : d.s2) + r;
+            gameRef.update({ [myPos === 'p1' ? 's1' : 's2']: ns, turn: (myPos === 'p1' ? 'p2' : 'p1') });
         });
     }
 
-    // إدارة القوائم
-    function openSide(id) { 
-        document.getElementById(id).classList.add('active'); 
-        document.getElementById('overlay').style.display = 'block'; 
-    }
-    function closeSides() { 
-        document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); 
-        document.getElementById('overlay').style.display = 'none'; 
-    }
-
-    // الشات
+    // الشات والملف
     function sendMsg() {
         let i = document.getElementById('msg-input'); if(!i.value) return;
-        db.ref('chat_v60').push({ u: "علوش", t: i.value });
+        db.ref('chat_v61').push({ u: me.name, t: i.value, a: me.img });
         i.value = "";
     }
 
-    db.ref('chat_v60').limitToLast(15).on('child_added', s => {
+    db.ref('chat_v61').limitToLast(15).on('child_added', s => {
         let d = s.val();
         let div = document.createElement('div');
-        div.innerHTML = `<div class="bubble"><b style="color:gold;">${d.u}:</b> ${d.t}</div>`;
-        document.getElementById('chat').appendChild(div);
-        document.getElementById('chat').scrollTop = document.getElementById('chat').scrollHeight;
+        div.innerHTML = `<div style="display:flex; gap:10px; margin-bottom:10px;">
+            <img src="${d.a}" style="width:35px; height:35px; border-radius:50%; border:1px solid gold;">
+            <div class="msg-bubble"><b style="color:gold; font-size:11px;">${d.u}</b><br>${d.t}</div>
+        </div>`;
+        document.getElementById('chat-area').appendChild(div);
+        document.getElementById('chat-area').scrollTop = document.getElementById('chat-area').scrollHeight;
     });
 
-    function rainGold() { db.ref('chat_v60').push({ u: "👑 الإمبراطور", t: "⛈️ مكرمة ملكية! تم توزيع الذهب للجميع! 💰" }); closeSides(); }
+    function upAvatar(i) { if(i.files[0]) { let r = new FileReader(); r.onload = e => { me.img = e.target.result; document.getElementById('my-avatar').src = e.target.result; }; r.readAsDataURL(i.files[0]); } }
+    function upCover(i) { if(i.files[0]) { let r = new FileReader(); r.onload = e => { document.getElementById('my-cover').src = e.target.result; }; r.readAsDataURL(i.files[0]); } }
+    function rainGold() { db.ref('chat_v61').push({ u: "👑 الإمبراطور", t: "⛈️ مكرمة ملكية! تم توزيع 5000 ذهبة! 💰", a: me.img }); closeSides(); }
 </script>
 </body>
 </html>
