--- a/index.html
+++ b/index.html
@@ -3,112 +3,112 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ALLOSH SUPREME V61 👑</title>
+    <title>ALLOSH FINAL FIXED V62 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
         :root { --gold: #ffd700; --bg: #000; }
-        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; transition: 0.3s; }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
         body { background: var(--bg); color: white; overflow: hidden; height: 100vh; position: fixed; width: 100%; }
 
-        /* الاسم النيون الفخم */
+        /* برستيج الملك */
+        .king-glow { animation: neon 1.5s infinite; font-weight: 900; }
         @keyframes neon { 0%, 100% {color: #fff; text-shadow: 0 0 10px var(--gold);} 50% {color: var(--gold); text-shadow: 0 0 20px #fff;} }
-        .king-name { animation: neon 2s infinite; font-weight: 900; }
 
         /* الهيدر */
-        .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 5000; }
+        .header { height: 65px; background: #0a0a0a; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 5000; position: relative; }
 
         /* القوائم والطبقة الشفافة */
-        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: rgba(10,10,15,0.98); z-index: 6000; backdrop-filter: blur(15px); }
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: rgba(10,10,15,0.98); z-index: 6000; backdrop-filter: blur(15px); transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1); }
         #side-r { right: -285px; border-left: 2px solid var(--gold); }
         #side-l { left: -285px; border-right: 2px solid var(--gold); overflow-y: auto; }
         .side.active { transform: translateX(0); }
         #side-r.active { right: 0; } #side-l.active { left: 0; }
-        #overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.6); z-index: 5500; display: none; }
+        #overlay-layer { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.7); z-index: 5500; display: none; }
 
-        /* الملف الشخصي الملكي */
-        .profile-card { position: relative; width: 100%; background: #111; }
-        .cover-img { width: 100%; height: 140px; object-fit: cover; border-bottom: 2px solid var(--gold); cursor: pointer; }
-        .avatar-container { position: absolute; bottom: -40px; right: 20px; text-align: center; }
-        .avatar-img { width: 85px; height: 85px; border-radius: 50%; border: 3px solid var(--gold); background: #000; cursor: pointer; }
-        .big-crown { position: absolute; top: -35px; right: 5px; font-size: 45px; filter: drop-shadow(0 0 10px gold); }
+        /* الملف الشخصي */
+        .p-header { position: relative; width: 100%; background: #111; height: 180px; }
+        .p-cover { width: 100%; height: 140px; object-fit: cover; border-bottom: 2px solid var(--gold); cursor: pointer; }
+        .p-av-holder { position: absolute; bottom: 0; right: 20px; text-align: center; }
+        .p-avatar { width: 80px; height: 80px; border-radius: 50%; border: 3px solid var(--gold); background: #000; cursor: pointer; }
+        .p-crown { position: absolute; top: -35px; right: 5px; font-size: 40px; filter: drop-shadow(0 0 10px gold); }
 
-        /* اللعبة */
-        #game-ui { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 9000; display: none; justify-content: center; align-items: center; }
-        .game-box { width: 95%; max-width: 500px; background: #fff; border-radius: 20px; color: #333; overflow: hidden; box-shadow: 0 0 30px var(--gold); }
-        .p-card { flex: 1; padding: 15px; text-align: center; border-radius: 12px; background: #f8f8f8; border: 2px solid #eee; }
-        .p-card.active-turn { border-color: #2ecc71; background: #f0fff4; }
+        /* واجهة اللعبة PvP */
+        #game-screen { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.96); z-index: 9999; display: none; justify-content: center; align-items: center; }
+        .game-card { width: 95%; max-width: 450px; background: #fff; border-radius: 20px; color: #333; overflow: hidden; box-shadow: 0 0 30px var(--gold); }
+        .p-box { flex: 1; padding: 15px; text-align: center; border: 2px solid #eee; border-radius: 12px; }
+        .p-box.active { border-color: #2ecc71; background: #f0fff4; }
 
         /* الشات */
-        #chat-area { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
-        .msg-bubble { background: rgba(255,255,255,0.08); padding: 10px; border-radius: 12px; border: 1px solid #222; max-width: 85%; }
+        #chat-flow { position: absolute; top: 65px; bottom: 85px; width: 100%; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 10px; }
+        .bubble { background: rgba(255,255,255,0.08); padding: 10px; border-radius: 12px; border: 1px solid #222; max-width: 85%; }
+        .bot-msg { border: 1px solid #00d2ff; background: rgba(0,210,255,0.05); color: #00d2ff; font-size: 13px; text-align: center; width: 100%; align-self: center; }
 
         .footer { position: fixed; bottom: 0; width: 100%; height: 85px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 0 10px; gap: 10px; }
-        input[type="text"] { flex: 1; height: 45px; background: #111; border: 1px solid #333; border-radius: 10px; color: #fff; padding: 0 15px; }
+        #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #333; border-radius: 10px; color: #fff; padding: 0 15px; }
     </style>
 </head>
-<body id="main-body">
+<body>
 
-<div id="overlay" onclick="closeSides()"></div>
+<div id="overlay-layer" onclick="closeSides()"></div>
 
-<div id="game-ui">
-    <div class="game-box">
-        <div style="background:#222; color:white; padding:15px; display:flex; justify-content:space-between; align-items:center;">
-            <button onclick="document.getElementById('game-ui').style.display='none'" style="background:red; border:none; color:white; padding:5px 15px; border-radius:8px; cursor:pointer;">خروج</button>
-            <b id="game-status">تحدي العملات الملكي 💰</b>
+<div id="game-screen">
+    <div class="game-card">
+        <div style="background:#222; color:white; padding:15px; display:flex; justify-content:space-between;">
+            <button onclick="document.getElementById('game-screen').style.display='none'" style="background:red; border:none; color:white; padding:5px 12px; border-radius:5px; cursor:pointer;">خروج</button>
+            <b id="g-status">انتظار الخصم...</b>
         </div>
         <div style="padding:20px;">
             <div style="text-align:center; margin-bottom:15px;">
-                <label style="font-size:12px; color:#666;">مبلغ الرهان</label><br>
-                <input type="number" id="bet-amount" style="width:100px; text-align:center; font-weight:900; border:2px solid gold; border-radius:8px;" oninput="updateLiveBet(this.value)">
+                <label style="font-size:12px; color:#999;">الرهان</label><br>
+                <input type="number" id="g-bet" style="width:100px; text-align:center; font-weight:900; border:2px solid gold; border-radius:8px;" oninput="syncBet(this.value)">
             </div>
             <div style="display:flex; gap:10px; margin-bottom:20px;">
-                <div class="p-card" id="pc1"><small>الإمبراطور</small><div style="font-size:40px; font-weight:900; color:#2ecc71;" id="sc1">0</div></div>
-                <div class="p-card" id="pc2"><small>الخصم</small><div style="font-size:40px; font-weight:900; color:#2ecc71;" id="sc2">0</div></div>
+                <div class="p-box" id="b1"><small>الإمبراطور</small><div style="font-size:40px; font-weight:900; color:#2ecc71;" id="sc1">0</div></div>
+                <div class="p-box" id="b2"><small>الخصم</small><div style="font-size:40px; font-weight:900; color:#2ecc71;" id="sc2">0</div></div>
             </div>
             <div style="text-align:center;">
-                <div id="dice-face" style="font-size:60px;">🎲</div>
-                <button id="roll-btn" onclick="rollAction()" style="width:100%; padding:15px; background:linear-gradient(45deg, #1e3799, #4a69bd); color:white; border:none; border-radius:12px; font-weight:900; display:none; cursor:pointer;">ارمي الزهر 🔥</button>
+                <div id="d-icon" style="font-size:60px;">🎲</div>
+                <button id="roll-btn" onclick="doRoll()" style="width:100%; padding:15px; background:#4a69bd; color:white; border:none; border-radius:12px; font-weight:900; display:none; cursor:pointer;">ارمي 🔥</button>
             </div>
         </div>
     </div>
 </div>
 
 <div class="header">
-    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px;">⚙️</button>
-    <div onclick="openGame()" style="font-size:32px; cursor:pointer;">🎮</div>
-    <div class="king-name">علوش الإمبراطور</div>
-    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px;">👥</button>
+    <button onclick="openSide('side-l')" style="background:none; border:none; font-size:26px;">⚙️</button>
+    <div onclick="openPvP()" style="font-size:32px; cursor:pointer;">🎮</div>
+    <div class="king-glow">علوش الإمبراطور</div>
+    <button onclick="openSide('side-r')" style="background:none; border:none; font-size:26px;">👥</button>
 </div>
 
 <div id="side-r" class="side">
-    <h3 style="padding:20px; text-align:center; color:var(--gold);">المتصلون الآن</h3>
-    <div id="online-list" style="padding:15px;"></div>
+    <h3 style="padding:20px; text-align:center; color:var(--gold); border-bottom:1px solid #222;">👥 المتصلون</h3>
+    <div id="on-list" style="padding:15px;"></div>
 </div>
 
 <div id="side-l" class="side">
-    <div class="profile-card">
-        <img class="cover-img" id="my-cover" src="https://images.unsplash.com/photo-1614850523296-d8c1af93d400" onclick="document.getElementById('f-cover').click()">
-        <input type="file" id="f-cover" hidden onchange="upCover(this)">
-        <div class="avatar-container">
-            <span class="big-crown">👑</span>
-            <img class="avatar-img" id="my-avatar" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" onclick="document.getElementById('f-avatar').click()">
-            <input type="file" id="f-avatar" hidden onchange="upAvatar(this)">
+    <div class="p-header">
+        <img class="p-cover" id="my-cov" src="https://images.unsplash.com/photo-1614850523296-d8c1af93d400" onclick="document.getElementById('up-c').click()">
+        <input type="file" id="up-c" hidden onchange="upC(this)">
+        <div class="p-av-holder">
+            <span class="p-crown">👑</span>
+            <img class="p-avatar" id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" onclick="document.getElementById('up-a').click()">
+            <input type="file" id="up-a" hidden onchange="upA(this)">
         </div>
     </div>
-    <div style="margin-top:55px; padding:20px; text-align:center;">
-        <h2 class="king-name">علوش</h2>
-        <p style="color:var(--gold); font-size:12px;">الإمبراطور المتصل</p>
-        <button onclick="rainGold()" style="width:100%; padding:15px; background:var(--gold); border:none; border-radius:12px; font-weight:900; margin-top:20px; cursor:pointer;">توزيع الذهب 💰</button>
+    <div style="padding:20px; text-align:center; margin-top:10px;">
+        <h2 class="king-glow">علوش</h2>
+        <button onclick="rainGold()" style="width:100%; padding:15px; background:var(--gold); border:none; border-radius:12px; font-weight:900; margin-top:25px; cursor:pointer;">توزيع 5000 ذهبة 💰</button>
     </div>
 </div>
 
-<div id="chat-area"></div>
+<div id="chat-flow"></div>
 
 <div class="footer">
-    <input type="text" id="msg-input" placeholder="تكلم يا إمبراطور..." onkeypress="if(event.key==='Enter') sendMsg()">
-    <button onclick="sendMsg()" style="background:var(--gold); border:none; padding:10px 20px; border-radius:10px; font-weight:900;">إرسال</button>
+    <input type="text" id="msg-in" placeholder="أمرك مطاع يا ملك..." onkeypress="if(event.key==='Enter') push()">
+    <button onclick="push()" style="background:var(--gold); border:none; padding:10px 20px; border-radius:10px; font-weight:900; cursor:pointer;">إرسال</button>
 </div>
 
 <script>
@@ -118,26 +118,27 @@
 
     let myPos = null;
     let me = { name: "علوش الإمبراطور", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
-    let gameRef = db.ref('arena_v61');
+    let gameRef = db.ref('fixed_arena_v62');
 
-    // حماية ونظام اتصال
-    db.ref('online_v61/' + me.name).set({ status: "online", role: "king" });
-    db.ref('online_v61/' + me.name).onDisconnect().remove();
+    // بوت الحماية + الترحيب
+    db.ref('online_v62/' + me.name).set(true);
+    db.ref('online_v62/' + me.name).onDisconnect().remove();
+    
+    // إشعار البوت عند الدخول
+    db.ref('chat_v62').push({ u: "🛡️ بوت الحماية", t: "أهلاً بك يا إمبراطور علوش، الشات مؤمن بالكامل. ✅", isBot: true });
 
-    db.ref('online_v61').on('value', s => {
-        let list = document.getElementById('online-list'); list.innerHTML = "";
-        s.forEach(u => {
-            list.innerHTML += `<div style="padding:10px; border-bottom:1px solid #111;">👑 ${u.key}</div>`;
-        });
+    db.ref('online_v62').on('value', s => {
+        let l = document.getElementById('on-list'); l.innerHTML = "";
+        s.forEach(u => l.innerHTML += `<div style="padding:10px; border-bottom:1px solid #111;">👑 ${u.key}</div>`);
     });
 
     // القوائم
-    function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
-    function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
+    function openSide(id) { closeSides(); document.getElementById(id).classList.add('active'); document.getElementById('overlay-layer').style.display = 'block'; }
+    function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay-layer').style.display = 'none'; }
 
-    // اللعبة
-    function openGame() {
-        document.getElementById('game-ui').style.display = 'flex';
+    // اللعبة PvP
+    function openPvP() {
+        document.getElementById('game-screen').style.display = 'flex';
         gameRef.once('value', s => {
             let d = s.val();
             if(!d || !d.p1) { myPos = 'p1'; gameRef.update({p1: me.name, s1:0, s2:0, turn:'p1', bet:0}); }
@@ -145,23 +146,23 @@
         });
     }
 
-    function updateLiveBet(v) { gameRef.update({ bet: v }); }
+    function syncBet(v) { gameRef.update({ bet: v }); }
 
     gameRef.on('value', s => {
         let d = s.val(); if(!d) return;
         document.getElementById('sc1').innerText = d.s1 || 0;
         document.getElementById('sc2').innerText = d.s2 || 0;
-        document.getElementById('bet-amount').value = d.bet || 0;
+        document.getElementById('g-bet').value = d.bet || 0;
         if(d.p1 && d.p2) {
-            document.getElementById('game-status').innerText = (d.turn === myPos) ? "دورك الآن 🔥" : "انتظر الخصم...";
+            document.getElementById('g-status').innerText = (d.turn === myPos) ? "دورك الآن 🔥" : "انتظر الخصم...";
             document.getElementById('roll-btn').style.display = (d.turn === myPos) ? 'block' : 'none';
-            document.getElementById('pc1').className = (d.turn === 'p1' ? 'p-card active-turn' : 'p-card');
-            document.getElementById('pc2').className = (d.turn === 'p2' ? 'p-card active-turn' : 'p-card');
+            document.getElementById('b1').className = (d.turn === 'p1' ? 'p-box active' : 'p-box');
+            document.getElementById('b2').className = (d.turn === 'p2' ? 'p-box active' : 'p-box');
         }
-        if(d.s1 >= 100 || d.s2 >= 100) { alert("انتهى التحدي!"); gameRef.remove(); document.getElementById('game-ui').style.display = 'none'; }
+        if(d.s1 >= 100 || d.s2 >= 100) { alert("انتهى الفوز!"); gameRef.remove(); document.getElementById('game-screen').style.display = 'none'; }
     });
 
-    function rollAction() {
+    function doRoll() {
         let r = Math.floor(Math.random() * 6) + 1;
         gameRef.once('value', s => {
             let d = s.val();
@@ -170,27 +171,31 @@
         });
     }
 
-    // الشات والملف
-    function sendMsg() {
-        let i = document.getElementById('msg-input'); if(!i.value) return;
-        db.ref('chat_v61').push({ u: me.name, t: i.value, a: me.img });
+    // الشات
+    function push() {
+        let i = document.getElementById('msg-in'); if(!i.value) return;
+        db.ref('chat_v62').push({ u: me.name, t: i.value, a: me.img });
         i.value = "";
     }
 
-    db.ref('chat_v61').limitToLast(15).on('child_added', s => {
+    db.ref('chat_v62').limitToLast(15).on('child_added', s => {
         let d = s.val();
         let div = document.createElement('div');
-        div.innerHTML = `<div style="display:flex; gap:10px; margin-bottom:10px;">
-            <img src="${d.a}" style="width:35px; height:35px; border-radius:50%; border:1px solid gold;">
-            <div class="msg-bubble"><b style="color:gold; font-size:11px;">${d.u}</b><br>${d.t}</div>
-        </div>`;
-        document.getElementById('chat-area').appendChild(div);
-        document.getElementById('chat-area').scrollTop = document.getElementById('chat-area').scrollHeight;
+        if(d.isBot) {
+            div.className = "bubble bot-msg"; div.innerText = d.t;
+        } else {
+            div.innerHTML = `<div style="display:flex; gap:10px; margin-bottom:8px;">
+                <img src="${d.a}" style="width:35px; height:35px; border-radius:50%; border:1px solid gold;">
+                <div class="bubble"><b style="color:gold; font-size:11px;">${d.u}</b><br>${d.t}</div>
+            </div>`;
+        }
+        document.getElementById('chat-flow').appendChild(div);
+        document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
 
-    function upAvatar(i) { if(i.files[0]) { let r = new FileReader(); r.onload = e => { me.img = e.target.result; document.getElementById('my-avatar').src = e.target.result; }; r.readAsDataURL(i.files[0]); } }
-    function upCover(i) { if(i.files[0]) { let r = new FileReader(); r.onload = e => { document.getElementById('my-cover').src = e.target.result; }; r.readAsDataURL(i.files[0]); } }
-    function rainGold() { db.ref('chat_v61').push({ u: "👑 الإمبراطور", t: "⛈️ مكرمة ملكية! تم توزيع 5000 ذهبة! 💰", a: me.img }); closeSides(); }
+    function upA(i) { if(i.files[0]) { let r = new FileReader(); r.onload = e => { me.img = e.target.result; document.getElementById('my-av').src = e.target.result; }; r.readAsDataURL(i.files[0]); } }
+    function upC(i) { if(i.files[0]) { let r = new FileReader(); r.onload = e => { document.getElementById('my-cov').src = e.target.result; }; r.readAsDataURL(i.files[0]); } }
+    function rainGold() { db.ref('chat_v62').push({ u: "👑 الإمبراطور", t: "⛈️ مكرمة ملكية! تم توزيع 5000 ذهبة! 💰", a: me.img }); closeSides(); }
 </script>
 </body>
 </html>
